--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -81,8 +81,8 @@
             <h5 style="font-size: min(23px, 3vw);"> исправьте свои данные ФИО в соответствующем разделе.</h5>
             <h5 style="font-size: min(25px, 3.2vw);"> Участники с некорректными ФИО(ФИК) удаляются! </h5>
             <h5 style="font-size: min(23px, 3vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
-            <h5 style="font-size: min(23px, 3vw);"> V этап завершен. Подробности о победителях и призерах см.в разделе "Инструкция" </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> Итоги осеннего турнира будут подведены 30.11.2023г. в 20:00 по MSK </h5>
+            <h5 style="font-size: min(23px, 3vw);"> VI этап завершен. Подробности о победителях и призерах см.в разделе "Инструкция" и в <a href="https://vk.com/club223699010" target="_blank"> ГРУППЕ ВК </a> </h5>
+            <h5 style="font-size: min(25px, 3.2vw);"> Итоги Рождественско-Новогоднего турнира будут подведены 13.01.2024г. в 20:00 по MSK </h5>
             <h5 style="font-size: min(23px, 3vw);"> Если Вы забыли свой логин <a href="https://vk.com/vovartus" target="_blank"> уточните в ЛС </a> .</h5>
 <!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены: 07.04.2023 в 15:00  </h5>-->
 
