--- a/jsprob/templates/jsprob/instr.html
+++ b/jsprob/templates/jsprob/instr.html
@@ -32,7 +32,7 @@
     <h5> Простите, за некоторую вольность в комментариях. </h5>
     <h5> Некоторые ленивые люди говорят, что можно быстро считать на калькуляторе … Можно. Однако, пройдя тренажер достаточное количество раз, можно научиться вычислять подобные примеры в уме, куда быстрее, чем набрать ряд необходимых цифр на калькуляторе. </h5>
     <h5> P.S. Не обновляйте и не переходите на предыдущую страницу браузера в момент прохождения этапов, это приведет к необходимости возвращаться в начальное меню. </h5>
-    <img src="{% static 'jsprob/img/priz.png' %}">
+    <img src="{% static 'jsprob/img/total61.png' %}">
     <h5> Для получения приза <a href="https://vk.com/vovartus" target="_blank"> напишите в ЛС </a> свои: 1) ФИО(К), 2) логин, 3) Куда перевести приз (телефон, реквизиты) </h5>
     <h4> С наилучшими пожеланиями, успехов! </h4>
     <h5> Побойкин В.Я. </h5>
