--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -4,7 +4,7 @@
 
 <aside>
     <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}!{{us}} </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на VI турнир по устному счету! </h5>
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на VII турнир по устному счету! </h5>
 <!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Идет турнир, в рамках Математической недели. </h5>-->
     <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.9vw);"> Участвовать могут все: от мала до велика. </h5>
 <!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут ученики любых классов Лицея №1. </h5>-->
