'VII_Turnir_vozobnovlen'

--- a/jsprob/templates/jsprob/list6.html
+++ b/jsprob/templates/jsprob/list6.html
@@ -184,6 +184,7 @@
             if (fl2==0) {
                 prim++;
                 ot='';
+                document.getElementById('prim').style.cssText = '-ms-user-select: none; -moz-user-select: none; -webkit-user-select: none; user-select: none; font-style: italic; font-size: min(68px, 11vw);';
                 pr=tass[prim];
                 document.getElementById('prim').innerHTML = pr + '=';
                 fl2=1;}
