--- a/jsprob/templates/jsprob/index.html
+++ b/jsprob/templates/jsprob/index.html
@@ -1,17 +1,18 @@
 {% extends 'jsprob/shabl.html' %}
 {% block title %} ТУРНИР ТРЕНАЖЕР ПО УСТНОМУ СЧЕТУ {% endblock %}
 {% block content %}
-
+{% load static %}
 <aside>
     <h5 class="featuress" id = 'nomb' style="font-style: italic; font-size: min(35px, 5.5vw);"> Здравствуйте{{nm}}!{{us}} </h5>
-    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Вас приветствует тренажер устного счета! </h5>
-<!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на VII турнир по устному счету! </h5>-->
+<!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Вас приветствует тренажер устного счета! </h5>-->
+    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 5vw);"> Добро пожаловать на VII турнир по устному счету! </h5>
 <!--    <h5 class="featuress" id = 'wait0' style="font-style: italic; font-size: min(32px, 4.2vw);"> Идет турнир, в рамках Математической недели. </h5>-->
-    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.9vw);"> В данный момент турнир не проводится. </h5>
+<!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.9vw);"> В данный момент турнир не проводится. </h5>-->
 <!--    <h5 class="featuress" id = 'wait1' style="font-style: italic; font-size: min(28px, 3.7vw);"> Участвовать могут ученики любых классов Лицея №1. </h5>-->
 </aside>
 
     <div class="features">
+        <h2 id = 'pict'> </h2>
         <div class="column-left" style='{{st}}'>
           {% if fl1 == 1 %}
              <h5 class='leftstr' style='color:blue; font-size: min(28px, 3.2vw);'> Лидеры последних дней: </h5>
@@ -83,8 +84,8 @@
             <h5 style="font-size: min(25px, 3.2vw);"> Участники с некорректными ФИО(ФИК) удаляются! </h5>
             <h5 style="font-size: min(23px, 3vw);"> Попыток по улучшению своего результата можно совершать неограниченное число раз. </h5>
             <h5 style="font-size: min(23px, 3vw);"> VI этап завершен. Подробности о победителях и призерах см.в разделе "Инструкция" и в <a href="https://vk.com/club223699010" target="_blank"> ГРУППЕ ВК </a> </h5>
-            <h5 style="font-size: min(25px, 3.2vw);"> В данное время турнир не проводится. Тренируйтесь. </h5>
-<!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги Рождественско-Новогоднего турнира будут подведены 13.01.2024г. в 20:00 по MSK </h5>-->
+<!--            <h5 style="font-size: min(25px, 3.2vw);"> В данное время турнир не проводится. Тренируйтесь. </h5>-->
+            <h5 style="font-size: min(25px, 3.2vw);"> Итоги Рождественско-Новогоднего (VII) турнира будут подведены 20.01.2024г. в 20:00 по MSK </h5>
             <h5 style="font-size: min(23px, 3vw);"> Если Вы забыли свой логин <a href="https://vk.com/vovartus" target="_blank"> уточните в ЛС </a> .</h5>
 <!--            <h5 style="font-size: min(25px, 3.2vw);"> Итоги турнира будут подведены: 07.04.2023 в 15:00  </h5>-->
 
@@ -138,6 +139,9 @@
     </style>
 
     <script>
+    var img = document.createElement("pict");
+    img.src = 'Ustn/jsprob/static/jsprob/img/total62.png';
+    document.body.appendChild(img);
     fl={{fl}};
     if (fl==1)  {addEventListener("keydown", function(event) {
                      if (event.keyCode==13 || event.keyCode==32)
