--- a/jsprob/templates/jsprob/progress.html
+++ b/jsprob/templates/jsprob/progress.html
@@ -42,7 +42,9 @@
         <h3 id ='wt' style="font-style: italic"></h3>
         <a style="font-size: min(20px, 2.5vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
         <a style="font-size: min(20px, 2.5vw);" href="{% url 'topglob' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> АБСОЛЮТНЫЙ ТОП </a>
-        <a style="font-size: min(20px, 2.5vw);" href="{% url 'topdays' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП ТОПов ДНЯ </a>
+        <a style="font-size: min(20px, 2.5vw);" href="{% url 'topdays' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП ТОПов ДНЯ </a></br>
+        <div style="height:8px"></div>
+        <a style="font-size: min(20px, 2.5vw);" href="{% url 'toplvlgl' %}" id = 'butt4' class="btn btn-success" onclick="Func()"> АБСОЛЮТНЫЙ ТОП ПО ЭТАПАМ </a>
         </br></br>
 
     </div>
