Automation_statistics_results_season_1

--- a/jsprob/templates/jsprob/progress1.html
+++ b/jsprob/templates/jsprob/progress1.html
@@ -109,6 +109,7 @@
                 document.getElementById('butt1').style.display='none';
                 document.getElementById('butt2').style.display='none';
                 document.getElementById('butt3').style.display='none';
+                document.getElementById('butt4').style.display='none';
                 document.getElementById('wt').innerHTML = 'Пожалуйста, подождите.';}
     </script>
 {% endblock %}
