--- a/jsprob/templates/jsprob/topday.html
+++ b/jsprob/templates/jsprob/topday.html
@@ -36,7 +36,7 @@
         <h3 id ='wt' style="font-style: italic"></h3>
         <a style="font-size: max(13px, 1.3vw);"  href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
         <a style="font-size: max(13px, 1.3vw);" href="{% url 'topdays' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> ТОП ТОПов ДНЯ </a>
-        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> ТОП сезона </a>
         </br></br>
 
     </div>
