--- a/jsprob/templates/jsprob/toplvlgl.html
+++ b/jsprob/templates/jsprob/toplvlgl.html
@@ -45,7 +45,7 @@
         </br>
         <h3 id ='wt' style="font-style: italic"></h3>
         <a style="font-size: max(13px, 1.3vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
-        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> Общий ТОП </a>
+        <a style="font-size: max(13px, 1.3vw);" href="{% url 'toptab' %}" id = 'butt2' class="btn btn-success" onclick="Func()"> ТОП сезона </a>
         <a style="font-size: max(13px, 1.3vw);" href="{% url 'topglob' %}" id = 'butt3' class="btn btn-success" onclick="Func()"> АБСОЛЮТНЫЙ ТОП </a>
         </br></br>
     </div>
