Automation_statistics_results_season_2

--- a/jsprob/templates/jsprob/reset.html
+++ b/jsprob/templates/jsprob/reset.html
@@ -22,8 +22,9 @@
     </div>
 
 <script>
-
+        alert({{kon}});
     function Func() {
+        alert({{kon}});
         if ({{kon}} == 1) {
         alert("ВНИМАНИЕ! Продолжение приведет к Завершению сезона");}
     }
