'adjusting_reset_class_resetting_last_user'

--- a/jsprob/templates/jsprob/congratul.html
+++ b/jsprob/templates/jsprob/congratul.html
@@ -10,7 +10,8 @@
     <div class="features">
         <img style="height: auto; width: {{wi}}px" src="{% static kub %}"><br><br>
         <h3 style="font-style: italic"> {{tx1}} </h3>
-        <h3 style="font-style: italic"> {{tx2}} </h3><br>
+        <h3 style="font-style: italic"> {{tx2}} </h3>
+        <h3 style="font-style: italic"> {{tx3}} </h3><br>
         <h3 id ='wt' style="font-style: italic"> </h3>
 
          <a style="font-size: max(13px, 1.3vw); "href="{% url 'topdays' %}"  id = 'butt1' class="btn btn-success" onclick="Func()"> ТОП ТОП-ов дня </a>
