--- a/jsprob/templates/jsprob/progress1.html
+++ b/jsprob/templates/jsprob/progress1.html
@@ -10,6 +10,7 @@
     <div class="features">
         <h5 style="font-style: italic; font-size: min(35px, 4vw);"> Абсолютный рекорд: {{gls}} {{gls1}} ({{pozgl}} место)</h5>
         <h5 style="font-style: italic; font-size: min(32px, 3.7vw);"> Рекорд в сезоне: {{sezsc}} {{sezsc1}} ({{pozsez}} место)</h5>
+        <h5 style="font-style: italic; font-size: min(31px, 3.6vw);"> Накопленных баллов в сезоне: {{bss}} </h5>
         <h5 style="font-style: italic; font-size: min(30px, 3.5vw);"> Лучший результат сегодня: {{sctd}} </h5>
 
         </br>
