--- a/jsprob/templates/jsprob/instr.html
+++ b/jsprob/templates/jsprob/instr.html
@@ -10,9 +10,10 @@
 
     <h4> Тренажер позволяет развивать полезный навык быстрого устного счета, </h4>
     <h4> при этом занять высокое место в ТОП-е игроков или просто проверить свои силы. </h4>
+    <h4> Участвуйте в турнирах, получайте призы. Подробности в <a href="https://vk.com/club223699010" target="_blank"> ГРУППЕ ВК </a> </h4>
     <h4> Вам предстоит пройти шесть этапов (в каждом по 10 простых примеров), </h4>
     <h4> На каждый уровень отводится определенное количество секунд. </h4>
-    <h4> Чем быстрее Вы проходите этап, тем больше зарабатываете очков. </h4>
+    <h4> ЧЕМ БЫСТРЕЕ Вы проходите этап, тем больше зарабатываете очков. </h4>
     <h5> Ошибаться можно, но нежелательно, особенно дважды в одном примере, т.к. теряется значительное количество очков. </h5>
     <h5> Для достижения лучших результатов, давайте вспомним некоторые приемы устных вычислений. </h5>
     <h5> В кавычках продемонстрирован «мыслительный процесс», который позволяет быстро прийти к ответу. </h5>
@@ -29,10 +30,10 @@
     <h5> Примеры 6-го этапа. (Рассчитан на 7класс+. Здесь только подсказки) </h5>
     <h5> 7) Необходимо вспомнить формулу разности квадратов: и слева направо, и справа налево. </h5>
     <h5> 8) Также использовать: 25 = 100 / 4, 125 = 1000 / 8 и вспомнить распределительный закон умножения. </h5>
-    <h5> Простите, за некоторую вольность в комментариях. </h5>
+    <h5> Простите, за некоторую вольность в комментариях решений. </h5>
     <h5> Некоторые ленивые люди говорят, что можно быстро считать на калькуляторе … Можно. Однако, пройдя тренажер достаточное количество раз, можно научиться вычислять подобные примеры в уме, куда быстрее, чем набрать ряд необходимых цифр на калькуляторе. </h5>
     <h5> P.S. Не обновляйте и не переходите на предыдущую страницу браузера в момент прохождения этапов, это приведет к необходимости возвращаться в начальное меню. </h5>
-    <img src="{% static 'jsprob/img/total61.png' %}">
+    <img src="{% static 'jsprob/img/total7.jpg' %}">
     <h5> Для получения приза <a href="https://vk.com/vovartus" target="_blank"> напишите в ЛС </a> свои: 1) ФИО(К), 2) логин, 3) Куда перевести приз (телефон, реквизиты) </h5>
     <h4> С наилучшими пожеланиями, успехов! </h4>
     <h5> Побойкин В.Я. </h5>
