--- a/jsprob/templates/jsprob/prizs.html
+++ b/jsprob/templates/jsprob/prizs.html
@@ -8,6 +8,17 @@
 
     <div class="features">
 
+        {% for k, v in prizs1.items %}
+              <h6 class='st1' style='line-height: 12px; font-style: italic;'> {{k}}) </h6>
+              <h6 class='st2'style='line-height: 12px; font-style: italic;'> {{v.1}} </h6>
+              <h6 class='st3' style='line-height: 12px; font-style: italic;'> {{v.2}} руб. </h6>
+              <h6 class='st4' style='line-height: 12px; font-style: italic;'> {{v.0}} </h6>
+
+        {% endfor %}
+        <div style="clear: left"></div>
+        <br>
+        <h5> ОБЩАЯ СУММА: {{sp1}}</h5>
+        </br></br>
         {% for k, v in prizs.items %}
               <h6 class='st1' style='line-height: 12px; font-style: italic;'> {{k}}) </h6>
               <h6 class='st2'style='line-height: 12px; font-style: italic;'> {{v.1}} </h6>
@@ -18,12 +29,11 @@
         <div style="clear: left"></div>
         <br>
         <h5> ОБЩАЯ СУММА: {{sp}}</h5>
+        </br></br>
         <a style="font-size: max(13px, 1.3vw);" href="{% url 'home' %}" id = 'butt1' class="btn btn-success" onclick="Func()"> СТАРТОВОЕ МЕНЮ </a>
 
-        </br></br>
 
     </div>
-
   <style>
    .st1 {
     float: left;
